--- a/app/oscitk/themes/Simple_Horizontal/styles/_section.scss
+++ b/app/oscitk/themes/Simple_Horizontal/styles/_section.scss
@@ -1,31 +1,257 @@
-#section-view {
-	padding-left: 40px;
+$header-height: 41px;
+$color-light-red: maroon;
+$color-dark-red: red;
+
+#section-container.container {
+
+	margin-top: calc( #{$header-height} + 15px);
+    height: calc(100% - 50px - #{$header-height} - 30px );
+
 }
 
+#reader {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+}
+
+// Scrolling tricks
+#section-container.container,
+body {
+	//overflow: hidden;
+}
+
+// TODO: Move some of this to _figures.scss
 #section {
-	padding: 20px 0 0 0;
+	//overflow: auto;
+	//overflow: hidden;
 
-	p {
-		position: relative;
+	// Baseline font-size
+	font-size: 16px;
+	line-height: 24px;
+
+	// This constrains #section b/w the #header and #navbar
+	width: 100%;
+
+	// hide scrollbar
+	height: calc( 100% );// + 30px); 
+
+	/*
+	margin-top: -15px;
+	margin-bottom: -15px;
+	
+	*/
+
+	padding: 0px 15px;
+
+	// Unsupported CSS3
+	//scroll-snap-points-x: repeat(100%);
+	//scroll-snap-type: mandatory;
+
+	#default-section-view {
+
+		overflow: hidden;
+		text-align: left;
+
+		// These are defined through javascript
+		/*
+		-webkit-columns: 2 300px;
+		   -moz-columns: 2 300px;
+		        columns: 2 300px;
+
+		-webkit-column-gap: 40px;
+		   -moz-column-gap: 40px;
+		        column-gap: 40px;
+		*/
+
+		font-size: 100%; // 16px
+		line-height: 100%; // 24px
+
+		padding-right: 15px;
+
+		// Chapter #
+		h2 {
+
+			font-family: 'Lora', serif;
+
+			//*
+			font-size: 0.875em;
+			line-height: 1.14285714285714em;
+			//*/
+
+			/*
+			font-size: 14px;
+			line-height: 16px;
+			//*/
+
+			text-align: center;
+			text-transform: uppercase;
+
+			color: #3c3c3c;
+		}
+
+		// Chapter Title
+		h3 {
+			font-family: 'Lora', serif;
+			font-weight: 700;
+
+			/*
+			font-size: 36px;
+			line-height: 40px;
+			//*/
+
+			//*
+			font-size: 2.25em;
+			line-height: 1.1111111111111em;
+			//*/
+
+			text-align: center;
+			
+			margin-bottom: 16px;
+			color: #3c3c3c;
+		}
+
+		// Body copy
+		p {
+			font-family: 'Lora', serif;
+
+			//clear: both;
+
+			/*
+			font-size: 16px;
+			line-height: 29px;
+			//*/
+
+			//*
+			font-size: 1em;
+			line-height: 1.8125em;
+			//*/
+
+			margin-bottom: 16px;
+			color: #3c3c3c;
+
+			// Offset for p > .paragraph-controls
+			// Changing this to a margin will affect nearest element calculations
+		    padding-left: 20px;
+    		text-indent: -10px;
+
+			position: relative; // anchor for .paragraph-controls
+
+
+			.footnote-reference {
+
+				padding-left: 9px;
+
+				margin: 0 5px;
+
+				display: inline-block;
+				position: relative;
+				
+				top: -5px;
+				
+				width: 15px;
+				height: 15px;
+				
+				border-radius: 50%;
+				
+				color: #fff;
+				font-size: 12px;
+				line-height: 15px;
+				text-align: center;
+				
+				background: $color-light-red;
+				
+				&:hover {
+					color:#fff;
+					text-decoration: none;
+					background: $color-dark-red;
+				}
+				
+			}
+
+			// TODO: Remove me? Hide me?
+			.glossary-term {
+				&:hover {
+					cursor: hand;
+				}
+			}
+
+		}
+
+		// Paragraph styles affect tooltips too
+		.tooltip-inner {
+			text-indent: 0;
+		}
+
+		// Ensure that the plate image(s) take up max space w/o overflowing
+		.plate {
+			max-width: 100%;
+			max-height: 100%;
+		}
+
 	}
+
 }
 
-@media (min-width: $screen-sm) {
-	#section-view {
-		padding: 0 40px;
+
+// Generic loader element
+.loader {
+	margin: 80px auto;
+
+	font-size: 10px;
+	position: relative;
+	text-indent: -9999em;
+
+	border-top: 1.1em solid rgba(184, 41, 39, 0.2);
+	border-right: 1.1em solid rgba(184, 41, 39, 0.2);
+	border-bottom: 1.1em solid rgba(184, 41, 39, 0.2);
+	border-left: 1.1em solid rgb(184, 41, 39);
+
+	-webkit-transform: translateZ(0);
+	-ms-transform: translateZ(0);
+	transform: translateZ(0);
+
+	-webkit-animation: load8 1.1s infinite linear;
+	animation: load8 1.1s infinite linear;
+
+	&, &:after {
+		border-radius: 50%;
+		width: 10em;
+		height: 10em;
 	}
 
-	#section {
-		padding: 70px 40px 0 0;
-
-		&:after {
-			padding-left: 40px;
+	@-webkit-keyframes load8 {
+		0% {
+			-webkit-transform: rotate(0deg);
+			transform: rotate(0deg);
+		}
+		100% {
+			-webkit-transform: rotate(360deg);
+			transform: rotate(360deg);
 		}
 	}
+	@keyframes load8 {
+		0% {
+			-webkit-transform: rotate(0deg);
+			transform: rotate(0deg);
+		}
+		100% {
+			-webkit-transform: rotate(360deg);
+			transform: rotate(360deg);
+		}
+	}
+
 }
 
-@media (min-width: $screen-md) {
-	.section-col {
-		float: none;
-	}
+
+// Only applies to the "main" section loader
+#loader {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-left: -5em;
+	margin-top: -40px;
 }
+
